--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <h1> 김새롬의 웹 페이지 </h1>
-<a href="/home/sm/index.html"> 슬롯머신으로 바로가기 </a>
+<a href="home/sm/index.html"> 슬롯머신으로 바로가기 </a>
 
 </body>
 </html>
