--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 </head>
 <body>
 <h1> 김새롬의 웹 페이지 </h1>
-<a href="home/sm/index.html"> 슬롯머신으로 바로가기 </a>
-<a href="guess.html"> 숫자맞추기 바로가기 </a>
-<a href="sum2.html"> 더하기 바로가기 </a>
+<a href="home/sm/index.html"> 슬롯머신으로 바로가기 </a><br>
+<a href="chart.html">챠트 그리기</a><br>
+<a href="guess.html"> 숫자맞추기 바로가기 </a><br>
+<a href="sum2.html"> 더하기 바로가기 </a><br>
 
 </body>
 </html>
