--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 <h1> 김새롬의 웹 페이지 </h1>
 <a href="home/sm/index.html"> 슬롯머신으로 바로가기 </a><br>
-<a href="chart.html">챠트 그리기</a><br>
+<a href="home/chart.html">챠트 그리기</a><br>
 <a href="guess.html"> 숫자맞추기 바로가기 </a><br>
 <a href="sum2.html"> 더하기 바로가기 </a><br>
 
