--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <a href="home/chart.html">챠트 그리기</a><br>
 <a href="guess.html"> 숫자맞추기 바로가기 </a><br>
 <a href="sum2.html"> 더하기 바로가기 </a><br>
-
+  <a href="pi.html">파이값계산하기 바로가기 </a><br>
+ 
 </body>
 </html>
